--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,3 +26,10 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v4.4.3
+      with:
+        # Artifact name
+        name: test
+        # A file, directory or wildcard pattern that describes what to upload
+        path: /home/runner/work/Rigol/Rigol/Rigol/bin/Debug/net8.0/Rigol.dll
