--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,3 +33,8 @@ jobs:
         name: test
         # A file, directory or wildcard pattern that describes what to upload
         path: /home/runner/work/Rigol/Rigol/Rigol/bin/Debug/net8.0/Rigol.dll
+    - name: GH Release
+        # You may pin to the exact commit or the version.
+        # uses: softprops/action-gh-release@7b4da11513bf3f43f9999e90eabced41ab8bb048
+      uses: softprops/action-gh-release@v2.2.0
+          
