--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: Install dependencies 📂
-        run: dotnet restore WebApi
+        run: dotnet restore Rigol
 
       - name: Build 🧱
-        run: dotnet build WebApi --configuration Release --no-restore
+        run: dotnet build Rigol --configuration Release --no-restore
           
